Fix issue #240: IE "search" by address not working.
Instead of using an invisible div to capture click events, I
changed the code to handle events directly on the search input field. We
don't have to worry about losing focus after the plugin becomes
'active' because the 'closeOthersWhenActive' property prevents this
from happening.

--- a/src/GeositeFramework/plugins/zoom_to/main.css
+++ b/src/GeositeFramework/plugins/zoom_to/main.css
@@ -72,9 +72,9 @@
         background-color: #FFF !important;
     }
 
-.pluginZoomTo-tool {
-    position: absolute;
-    width: 34px;
-    height: 34px;
+.pluginZoomTo input {
     cursor: pointer;
+}
+.pluginZoomTo.pluginZoomTo-showing-input input {
+    cursor: auto;
 }
